tests/fail/elaboration/unsolved/fun-literal-param-type.fathom
//~ allow-errors = true

fun a => a
